[package]
name = "eve_tele"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gtk = { version = "0.7.3", package = "gtk4", features = ["v4_8"] }
plotters = "0.3.5"
plotters-cairo = "0.5.0"
serialport = "4.2.2"
tokio = "1.34.0"
